Added a about window and a context menu to the extras menu button

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-./src/JMP/target
-./src/JMP/dependency-reduced-pom.xml
-./src/JMP/test
-./src/JMP/.settings
-./src/JMP/.project
+src/JMP/target/
+src/JMP/dependency-reduced-pom.xml
+src/JMP/test/
+src/JMP/.settings/
+src/JMP/.project
